@@ -11,13 +11,17 @@ AC_DEFUN([GNOME_INIT],
 	AC_SUBST(GNOME_LIBS)
 	AC_SUBST(GNOMEUI_LIBS)
 	AC_SUBST(GTKXMHTML_LIBS)
-	AC_SUBST(GNOMELIB_DIR)
-	AC_SUBST(GNOMEINCLUDE_DIR)
+	AC_SUBST(GNOME_LIBDIR)
+	AC_SUBST(GNOME_INCLUDEDIR)
 
-	if test x$prefix = xNONE; then
-	    gnome_prefix=$ac_default_prefix/lib
+	if test x$exec_prefix = xNONE; then
+	    if test x$prefix = xNONE; then
+	        gnome_prefix=$ac_default_prefix/lib
+	    else
+		gnome_prefix=$prefix/lib
+	    fi
 	else
-	    gnome_prefix=$prefix/lib
+	    gnome_prefix=`eval echo \`echo $libdir\``
 	fi
 
 	AC_ARG_WITH(gnome-includes,
@@ -39,12 +43,13 @@ AC_DEFUN([GNOME_INIT],
 	])
 	
 
-        AC_MSG_CHECKING(for gnomeConf.sh file)
-	if test -e $gnome_prefix/gnomeConf.sh; then
+        AC_MSG_CHECKING(for gnomeConf.sh file in $gnome_prefix)
+	if test -f $gnome_prefix/gnomeConf.sh; then
 	    AC_MSG_RESULT(found)
 	    echo "loading gnome configuration from $gnome_prefix/gnomeConf.sh"
 	    . $gnome_prefix/gnomeConf.sh
 	else
+	    AC_MSG_RESULT(not found)
 	    AC_MSG_ERROR(Could not find the gnomeConf.sh file that is generated by gnome-libs install)
 	fi
 ])
